--- a/style.scss
+++ b/style.scss
@@ -53,10 +53,10 @@ body {
 
 #video-background {
   position: fixed;
-  right: 0;
-  bottom: 0;
+  top: 0;
+  left: 0;
   min-width: 100%;
-  min-height: 100%;
+  //min-height: 100%;
   width: auto;
   height: auto;
   z-index: -100;
